# pragma

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  Terminal_Ide_Plan.md  components.json  floating.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
.agents/skills/ui-ux-pro-max/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml  release.yml
.pragma/: run.json
docs/: GIT_WORKFLOW.md  KIMI_PROMPT.md  PLAN.md  REMAINING_REDESIGN_TASKS.md  ROADMAP.md  UI_REDESIGN.md  mempalace_commands.md
docs/assets/: README.md
public/: third-party-licenses.json
scripts/: copy-material-icons.js  generate-app-icons.js  generate-completion-icons.mjs  generate-licenses.mjs
src/: App.tsx  globals.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: file_explorer.rs  git_graph_layout.rs  git_log.rs
src-tauri/capabilities/: default.json  floating.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  platform.rs  window.rs
src-tauri/src/ai/: auth.rs  config.rs  error.rs  keychain.rs  mod.rs  provider.rs  registry.rs
src-tauri/src/ai/acp/: approval_bridge.rs  client.rs  error.rs  fs_bridge.rs  manager.rs  mcp_bridge.rs  mod.rs  tools_bridge.rs  types.rs
src-tauri/src/ai/cli/: manager.rs  manifest.rs  mod.rs
src-tauri/src/ai/providers/: anthropic.rs  copilot.rs  custom.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: ai.rs  chat_storage.rs  cli.rs  context.rs  docker.rs  fs.rs  git.rs  lsp.rs  mcp.rs  mod.rs  perf.rs  pty.rs  run.rs  search.rs
src-tauri/src/commands/ai/: chat.rs  completion.rs  copilot.rs  external.rs  keys.rs  mod.rs  stream.rs  terminal.rs  types.rs
src-tauri/src/git/: branch.rs  env_loader.rs  graph.rs  mod.rs  remote.rs  status.rs
src-tauri/src/modules/: app_state.rs  env_loader.rs  fonts.rs  fs.rs  mod.rs  pty.rs  run.rs  workspace.rs
src-tauri/src/modules/git/: commands.rs  errors.rs  graph_layout.rs  mod.rs  operations.rs  parser.rs  process.rs  types.rs  utils.rs
src-tauri/src/modules/git/operations/: branch.rs  commit.rs  compose.rs  diff.rs  log.rs  mod.rs  remote.rs  stage.rs  stash.rs  status.rs
src-tauri/src/modules/local_history/: commands.rs  config.rs  diff_engine.rs  mod.rs  storage.rs  watcher.rs
src-tauri/src/modules/lsp/: client.rs  manager.rs  mod.rs  requests.rs  types.rs  uris.rs
src-tauri/src/modules/mcp/: client.rs  error.rs  manager.rs  mod.rs  tools.rs
src-tauri/tests/: mcp_tool_loop.rs
src-tauri/tests/fixtures/: echo_mcp_server.py  echo_mcp_server.rs
src-tauri/windows/: add-to-path.ps1  path-env.wxs  path-hooks.nsh  remove-from-path.ps1
src/app/: App.tsx  CommandPalette.tsx  ErrorBoundary.tsx  GlobalContextMenu.tsx  GoToFile.tsx  useAppShortcutActions.ts  useCommandPaletteCommands.ts  useGoToFile.ts  useLspSymbolCommands.ts
src/components/chat/: ActivityBlock.tsx  AiModelSelector.tsx  ChatCodeBlock.tsx  ChatMessage.tsx  ChatPanel.tsx  ChatSessionList.tsx  ChatTypingIndicator.tsx  CodeBlock.tsx  ContextPicker.tsx  Conversation.tsx  MarkdownCode.tsx  Message.tsx  ReasoningBlock.tsx  Shimmer.tsx  SourceBlock.tsx
src/components/editor/: Editor.tsx  EditorStatusbar.tsx  InlineDiff.tsx  SelectionAskAi.tsx  TabBar.tsx  index.ts  vim-status.tsx
src/components/layout/: AIChatPanel.tsx  (+5 more)
src/hooks/: useAI.ts  useAIInit.ts  useAutoSave.ts  useFileExplorer.ts  useGit.ts  useOpenFile.ts  useSaveFile.ts  useTerminalSuggestions.ts
src/lib/: ai-providers.ts  extract-code-block.test.ts  language.ts  terminal.ts
src/stores/: ai.ts  aiEdit.ts  editor.ts  fileExplorer.ts  git.ts  index.ts  layout.ts  localHistory.ts  runConfig.ts  settings.ts  terminal.ts  workspace.ts
src/theme/: ThemeProvider.tsx  applyTheme.ts  customThemes.ts  index.ts  types.ts  validateTheme.ts
(+343 files in other folders)
