[package]
name = "app"
version = "0.1.0"
description = "A lightweight, AI-native desktop IDE with an integrated terminal"
authors = ["NiklasTech <info@nh-webdev.de>"]
license = "Apache-2.0"
repository = "https://github.com/NiklasTech/pragma"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.9"
uuid = { version = "1.16", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
shared_child = "1"
notify = "7.0"
chrono = { version = "0.4", features = ["serde"] }
diffy = "0.4"
sha2 = "0.10"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.52.3", features = ["process", "rt-multi-thread", "macros"] }
zip = { version = "4.2", default-features = false, features = ["deflate"] }
tokio-util = "0.7"
shellwords = "1.1.0"
tracing = "0.1.44"
sysinfo = "0.34"
bollard = "0.20"
ignore = "0.4"
regex = "1.0"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "echo-mcp-server"
path = "tests/fixtures/echo_mcp_server.rs"

[[bench]]
name = "file_explorer"
harness = false

[[bench]]
name = "git_log"
harness = false

[[bench]]
name = "git_graph_layout"
harness = false
